fix: increase node build version for gh actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18]
+        with:
+          node-version: 20
+          cache: 'npm'
 
     steps:
       - name: Checkout repository
